# hangman

./: .gitignore  CMakeLists.txt  README.md  words.txt
src/: main.cpp
src/Board/: Board.cpp  Board.h
src/GameExceptions/: GameExceptions.cpp  GameExceptions.h
src/GameLogic/: GameHangman.cpp  GameHangman.h
src/HangmanIllustration/: HangmanIllustration.cpp  HangmanIllustration.h  illustration_0.txt  illustration_1.txt  illustration_2.txt  illustration_3.txt  illustration_4.txt  illustration_5.txt  illustration_6.txt
src/Helpers/: Helpers.cpp  Helpers.h
src/Words/: Words.cpp  Words.h
